apps/argo-rollouts/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: argo-rollouts
  labels:
    app.kubernetes.io/name: argo-rollouts
