apps/argo-rollouts/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argo-rollouts-dashboard
  namespace: argo-rollouts
spec:
  parentRefs:
    - name: eg
      namespace: envoy-gateway-system
  hostnames:
    - rollouts.talos.froystein.jp
  rules:
    - backendRefs:
        - name: argo-rollouts-dashboard
          port: 3100
